# test-packages/test-services/openapi/swagger-yaml-service/api.ts
@@ -5,7 +5,7 @@
  */
 import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
 import { DefaultApi } from './openapi/api';
-
+import { TestEntity } from './openapi/model';
 
 export const SwaggerYamlServiceApi = {
   postEntity: (args: {
@@ -16,5 +16,14 @@ export const SwaggerYamlServiceApi = {
     'postEntity',
     args.pathParam,
     args.queryParam
+  ),
+  patchEntity: (args: {
+    pathParam: string,
+    testEntity?: TestEntity
+  }) => new OpenApiRequestBuilder<DefaultApi, 'patchEntity'>(
+    DefaultApi,
+    'patchEntity',
+    args.pathParam,
+    args.testEntity
   )
 };
